# tekton

./: .gitignore  Cargo.toml  README.md  crossxor.go  crossxor.test  crossxor_test.go  go.mod
c++/: benchmarks  build.sh  callgrind.out.581600  deps.sh  tekton  tekton.cxx  tekton.hxx  tekton_benchmarks.cxx  tekton_tests.cxx  tests
go/: crossxor.go  crossxor_test.go  go.mod  tekton  tekton.go  tekton_128.go  tekton_256.go  tekton_test.go
rust/code/: Cargo.toml  benchmark.sh
rust/code/src/: imp.rs  lib.rs
rust/code/src/imp/: b128.rs  b256.rs  primitives.rs  util.rs
rust/code/tests/: information_theory_test.rs  performance_test.rs
src/: imp.rs  lib.rs
src/imp/: b128.rs  b256.rs  primitives.rs  util.rs
tests/: information_theory_test.rs  performance_test.rs
