[package]
name = "code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
aes = "0.8.2"
paste = "1.0.0"
rand_distr = "0.4.3"

[lib]
name = "tekton"
path = "src/lib.rs"

[profile.release]
debug = 1
